# rbbardiche

./: .editorconfig  .gitignore  .yarnrc.yml  Cargo.toml  Gemfile  checker.rb  package.json
lsp/: Cargo.toml
lsp/src/: lib.rs  main.rs
scripts/: test.rb
src/: ast.rs  lexing.rs  lib.rs  parser.rs  parser_diagnostics.rs  parsing.rs  pgem_ast.rs  pos.rs  ruby_util.rs  token.rs  util.rs
src/parser/: lexer.rs  parser_impl.rs  token.rs
testfiles/: Cargo.toml
testfiles-macros/: Cargo.toml
testfiles-macros/src/: lib.rs
testfiles/src/: lib.rs  rt.rs
tests/: parser.rs
tests/parse/: arg_lex.pending.txt  arg_lex.pgem.txt  arg_lex.rb  args.pgem.txt  args.rb  args_errors.errors.txt  args_errors.pgem.txt  args_errors.rb  array.pgem.txt  array.rb  assign.json  assign.pgem.txt  assign.rb  call.pgem.txt  call.rb  chained_comparisons.errors.txt  chained_comparisons.json  chained_comparisons.pgem.txt  chained_comparisons.rb  chained_ranges.errors.txt  chained_ranges.json  chained_ranges.pgem.txt  chained_ranges.rb  classes.pgem.txt  classes.rb  classes_errors.rb  comments.json  comments.rb  def.pending.txt  def.pgem.txt  def.rb  empty.json  ident.json  ident.pending.txt  ident.pgem.txt  ident.rb  modules.pgem.txt  modules.rb  newline.json  newline.pending.txt  (+35 more)
tests/parse/eof/: eof1.pgem.txt  eof1.rb  eof2.rb  eof3.rb  non_eof.pending.txt  non_eof.pgem.txt  non_eof.rb
tests/parse/level1/: README.md  comment.rb
tests/parse/level2/: README.md  alias.pending.txt  alias.pgem.txt  alias.rb  aref.errors.txt  aref.pending.txt  aref.pgem.txt  aref.rb  assign.pgem.txt  assign_op.errors.txt  assign_op.pgem.txt  begin.pgem.txt  begin.rb  break.pending.txt  call_relative.pgem.txt  capital_begin.pending.txt  capital_begin.pgem.txt  capital_begin.rb  capital_end.pending.txt  capital_end.pgem.txt  capital_end.rb  case.errors.txt  case.pending.txt  case.pgem.txt  case.rb  class.pgem.txt  class.rb  const_relative.pgem.txt  const_relative.rb  def.pgem.txt  def.rb  defined.errors.txt  defined.pending.txt  defined.pgem.txt  defined.rb  for.pending.txt  for.pgem.txt  for.rb  if.pgem.txt  if.rb  (+95 more)
tests/parse/level3/: README.md
tests/parse/level3/assign_op/: additive_add.pending.txt  additive_add.pgem.txt  additive_add.rb  additive_sub.pending.txt  additive_sub.pgem.txt  additive_sub.rb  bitwise_and.pending.txt  bitwise_and.pgem.txt  bitwise_and.rb  bitwise_or_bitwise_or.pgem.txt  (+29 more)
tests/parse/level4/: README.md
tests/parse/level5/: README.md
tests/parse/level6/: README.md
tests/parse/level7/: README.md
vscode/: package.json  tsconfig.json
vscode/src/: index.ts
(+561 files in other folders)
