[package]
name = "rbbardiche"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "0.2.17"
serde = { version = "1.0.137", features = ["derive"] }

[dev-dependencies]
testfiles = { path = "testfiles" }
walkdir = "2.3.2"

[workspace]
members = [
    "lsp",
    "testfiles-macros",
    "testfiles",
]
