[package]
name = "rbbardiche"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "0.2.17"
once_cell = "1.12.0"
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.31"
clap = { version = "3.1.18", features = ["derive"] }
unicode-general-category = "0.5.1"

[dev-dependencies]
testfiles = { path = "testfiles" }
walkdir = "2.3.2"

[workspace]
members = [
    "lsp",
    "testfiles-macros",
    "testfiles",
]
