[package]
name = "rbbardiche-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
parking_lot = "0.12.1"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread", "io-std"] }
tower-lsp = "0.17.0"
rbbardiche = { path = ".." }

[dev-dependencies]
