[package]
name = "testfiles"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "0.2.17"
serde = "1.0.137"
serde_json = "1.0.81"
walkdir = "2.3.2"
utime = "0.3.1"
testfiles-macros = { path = "../testfiles-macros" }

[dev-dependencies]

